@@ -780,6 +780,7 @@ mangoo I/O supports the following validations out of the box
 * IPv6
 * Range
 * Regular expression
+* Numeric
 
 === Showing error messages in a template
 
@@ -797,7 +798,7 @@ To display a form specific error you can use the error method on a form field
 
 [source,html]
 -----------------------
-${form.error("myField)}
+${form.error("myField")}
 -----------------------
 
 This will display e.g.
