@@ -5,6 +5,7 @@
 [small]#Released at 21.12.2015#
 
 * https://github.com/svenkubiak/mangooio/issues/101[#101] Fixed keys in archetype (MarkVink)
+* https://github.com/svenkubiak/mangooio/issues/97[#97] Fixed incorrect Form documentation (svenkubiak, MarkVink)
 * https://github.com/svenkubiak/mangooio/issues/94[#95] Added new @memory administrative URL (svenkubiak)
 * https://github.com/svenkubiak/mangooio/issues/94[#94] Added new @system administrative URL (svenkubiak)
 * https://github.com/svenkubiak/mangooio/issues/93[#93] Improved DispatcherHandler/RequestHandler (svenkubiak)
